# Framer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: hello.h
include/Framer/: Buffer.h  Camera.h  ComputeShader.h  EBO.h  Framer.h  ImGuiImpl.h  Shader.h  ShaderParser.h  Timer.h  VAO.h  VBO.h  Window.h
src/: Buffer.cpp  Camera.cpp  ComputeShader.cpp  ImGuiImpl.cpp  Shader.cpp  ShaderParser.cpp  Timer.cpp  VAO.cpp  VBO.cpp  Window.cpp  hello.cpp
